--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,7 +42,7 @@
 #       with:
 #         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-name: 'Terraform test'
+name: 'Terraform'
 
 on:
   push:
@@ -51,9 +51,15 @@ on:
 permissions:
   contents: read
 
+env:
+  ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+  ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+  ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+
 jobs:
   terraform:
-    name: 'Terraform Test'
+    name: 'Terraform'
     runs-on: ubuntu-latest
     environment: production  # this is a label could be anything
 
@@ -76,12 +82,13 @@ jobs:
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
-
-    # Checks that all Terraform configuration files adhere to a canonical format
-    - name: Terraform Format
-      run: terraform fmt -check -recursive
-
-    # Validate Terraform files
-    - name: Terraform Validate
-      run: terraform validate
       
+    # Login to Azure via Azure CLI
+    - name: Login via Azure CLI
+	    uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+	  
+	  # Terraform Apply
+	  - name: Terraform Apply
+      run: terraform apply -auto-approve
